project('adbginject', 'c', default_options : ['c_std=c11'])
shmif = dependency('arcan-shmif')
thread = dependency('threads')
cc = meson.get_compiler('c')
math = cc.find_library('m', required : false)
shared_library('adbginject', 'src/adbinject.c', install : true, dependencies : [shmif, math, thread])
